; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/radeon/extr_atombios_crtc.c_atombios_crtc_set_base_atomic.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/radeon/extr_atombios_crtc.c_atombios_crtc_set_base_atomic.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_crtc = type { %struct.drm_device* }
%struct.drm_device = type { %struct.radeon_device* }
%struct.radeon_device = type { i32 }
%struct.drm_framebuffer = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @atombios_crtc_set_base_atomic(%struct.drm_crtc* %0, %struct.drm_framebuffer* %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.drm_crtc*, align 8
  %8 = alloca %struct.drm_framebuffer*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca %struct.drm_device*, align 8
  %13 = alloca %struct.radeon_device*, align 8
  store %struct.drm_crtc* %0, %struct.drm_crtc** %7, align 8
  store %struct.drm_framebuffer* %1, %struct.drm_framebuffer** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  %14 = load %struct.drm_crtc*, %struct.drm_crtc** %7, align 8
  %15 = getelementptr inbounds %struct.drm_crtc, %struct.drm_crtc* %14, i32 0, i32 0
  %16 = load %struct.drm_device*, %struct.drm_device** %15, align 8
  store %struct.drm_device* %16, %struct.drm_device** %12, align 8
  %17 = load %struct.drm_device*, %struct.drm_device** %12, align 8
  %18 = getelementptr inbounds %struct.drm_device, %struct.drm_device* %17, i32 0, i32 0
  %19 = load %struct.radeon_device*, %struct.radeon_device** %18, align 8
  store %struct.radeon_device* %19, %struct.radeon_device** %13, align 8
  %20 = load %struct.radeon_device*, %struct.radeon_device** %13, align 8
  %21 = call i64 @ASIC_IS_DCE4(%struct.radeon_device* %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %29

23:                                               ; preds = %5
  %24 = load %struct.drm_crtc*, %struct.drm_crtc** %7, align 8
  %25 = load %struct.drm_framebuffer*, %struct.drm_framebuffer** %8, align 8
  %26 = load i32, i32* %9, align 4
  %27 = load i32, i32* %10, align 4
  %28 = call i32 @dce4_crtc_do_set_base(%struct.drm_crtc* %24, %struct.drm_framebuffer* %25, i32 %26, i32 %27, i32 1)
  store i32 %28, i32* %6, align 4
  br label %45

29:                                               ; preds = %5
  %30 = load %struct.radeon_device*, %struct.radeon_device** %13, align 8
  %31 = call i64 @ASIC_IS_AVIVO(%struct.radeon_device* %30)
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %39

33:                                               ; preds = %29
  %34 = load %struct.drm_crtc*, %struct.drm_crtc** %7, align 8
  %35 = load %struct.drm_framebuffer*, %struct.drm_framebuffer** %8, align 8
  %36 = load i32, i32* %9, align 4
  %37 = load i32, i32* %10, align 4
  %38 = call i32 @avivo_crtc_do_set_base(%struct.drm_crtc* %34, %struct.drm_framebuffer* %35, i32 %36, i32 %37, i32 1)
  store i32 %38, i32* %6, align 4
  br label %45

39:                                               ; preds = %29
  %40 = load %struct.drm_crtc*, %struct.drm_crtc** %7, align 8
  %41 = load %struct.drm_framebuffer*, %struct.drm_framebuffer** %8, align 8
  %42 = load i32, i32* %9, align 4
  %43 = load i32, i32* %10, align 4
  %44 = call i32 @radeon_crtc_do_set_base(%struct.drm_crtc* %40, %struct.drm_framebuffer* %41, i32 %42, i32 %43, i32 1)
  store i32 %44, i32* %6, align 4
  br label %45

45:                                               ; preds = %39, %33, %23
  %46 = load i32, i32* %6, align 4
  ret i32 %46
}

declare dso_local i64 @ASIC_IS_DCE4(%struct.radeon_device*) #1

declare dso_local i32 @dce4_crtc_do_set_base(%struct.drm_crtc*, %struct.drm_framebuffer*, i32, i32, i32) #1

declare dso_local i64 @ASIC_IS_AVIVO(%struct.radeon_device*) #1

declare dso_local i32 @avivo_crtc_do_set_base(%struct.drm_crtc*, %struct.drm_framebuffer*, i32, i32, i32) #1

declare dso_local i32 @radeon_crtc_do_set_base(%struct.drm_crtc*, %struct.drm_framebuffer*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
